# color_as_political_information

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/irb/: color_yard_sign_debrief_addendum.docx  fa_review_form_aes.docx  hrp-502.docx  hrp-502.pages
data/: dissertation_database  dissertation_database.wal
data/prr/pre-test/: SPS_Spring2020Lab_Codebook.docx  sps1.dta
data/prr/sim/: sample200SimResults.RDS  sample200SimResults.RData  sample400SimResults.RDS  sample400SimResults.RData  sample600SimResults.RDS  sample600SimResults.RData  sample800SimResults.RDS  sample800SimResults.RData
data/study_2/: codebook-us-house-1976–2020.md
src/: _chapter_2.qmd  appendix.qmd  color_conveys_information_chapter.qmd  manuscript.qmd
src/R/: clean_data.R  predicted_prob_bar.R  relocate.R  wtf.R
src/assets/irb/: hrp-503.docx  hrp-503.pages  questionnaires_adendum.docx  questionnaires_adendum.pages
src/eda/study_1/: cleaning.R  descriptive_stats.R  preliminary_analyses_study_1.R
src/models/: study_1_fitting.R
src/prr/: color_influence_pre-reg_anon.qmd  si_color_influence_pre-reg_anon.qmd  tests.R
src/prr/PY/: helper.py
src/prr/R/: discrepancy.R  discrepancy_df.R  generate_samples.R  one_sample.R  sim_all.R  true_positive.R  true_positive_hist.R
src/prr/STAN/: vote_guess_simulated_model.stan
src/study_2/: 04_color_detection.py  05_mit_election_lab_merge.py
test/: test_clean_data.R  test_discrepancy.R  test_relocate.R  test_true_positive.R
test/prr/: test_discrepancy_df.R  test_generate_samples.R  test_one_sample.R  test_sim_all.R
(+6 files in other folders)
